Añadida tabla de direcciones

--- a/Servidor/servidorREST/package.json
+++ b/Servidor/servidorREST/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "express": "*",
-    "request": "*"
+    "request": "*",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "mocha": "*"
