--- a/Servidor/logica/package.json
+++ b/Servidor/logica/package.json
@@ -9,7 +9,7 @@
     "test": "node ./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
-    "sqlite3": "*"
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "mocha": "*"
