--- a/Servidor/logica/package.json
+++ b/Servidor/logica/package.json
@@ -9,6 +9,7 @@
     "test": "node ./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
