--- a/Servidor/logica/package.json
+++ b/Servidor/logica/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "jsdom": "^15.2.1",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
