--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bcrypt": "^3.0.6",
     "canvas": "^2.6.0",
     "express": "*",
+    "multer": "^1.4.2",
     "request": "*",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.0",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "jsdom": "^15.2.1",
