--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.6",
     "canvas": "^2.6.0",
     "express": "*",
+    "fs": "0.0.1-security",
     "multer": "^1.4.2",
     "request": "*",
     "sqlite3": "^4.1.0",
